No bug: Center-align Sign in button in the header (r=me)

--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -705,19 +705,17 @@ header nav .right {
 
 header nav .right .sign-in-header {
   display: inline-block;
-  vertical-align: bottom;
   font-size: 14px;
-  margin-bottom: 14px;
+  float: left;
 }
 
 header nav .right .sign-in-header .button {
-  border: 1.75px solid #7BC176;
+  border: 1.5px solid #7BC176;
   color: white;
   border-radius: 2px;
   padding: 10px 25px;
   text-align: center;
-  transition-duration: 0.4s;
-  margin-right: 16px;
+  margin: 10px 5px 0 0;
 }
 
 header nav .right .sign-in-header .button:hover {
